better osascript